<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetingRoomKiosk</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="register_gcm">Register to GCM</string>
    <string name="gcm_reg_id">GCM Registration ID</string>
    <string name="reregister">Re-register</string>
    <string name="server_username">Server username</string>
    <string name="server_password">Server password</string>
    <string name="save">Save</string>
    <string name="room_id">Room ID</string>
    <string name="server_url">Server URL</string>
    <string name="serverUrlHint">Include protocol, hostname and port</string>
    <string name="server_token">Server Token</string>
    <string name="edit_server_info">Edit Server Information</string>
    <string name="not_registered_to_gcm">Not registered to GCM. Navigating to settings.</string>
    <string name="not_registered_to_server">Not registered to server. Navigating to settings.</string>
    <string name="gcm_section_title">Google Cloud Messaging</string>
    <string name="server_info_section_title">Server Information</string>
    <string name="sensor_section_title">Sensor Information</string>
    <string name="refresh">Refresh</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="sensor_room_id">Sensor Room ID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_session">Current Session</string>
    <string name="day_overview">Day Overview</string>
    <string name="week_overview">Week Overview</string>
    <string name="on_air">ON AIR</string>
    <string name="session_in_progress">Session In Progress</string>
    <string name="no_session_in_progress">No Session In Progress</string>
    <string name="unable_to_fetch_sensor_info">Unable to fetch the display or sensor information.</string>
    <string name="syncing">Synchronizing, please wait…</string>
    <string name="next_session">Next session in </string>
    <string name="unable_to_fetch_schedule">Unable to fetch schedule from server.</string>
    <string name="back_to_the_future">BTTF</string>
    <string name="no_upcoming_events_today">No upcoming events today</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="title_activity_event_detail">Event Detail</string>
    <string name="hello_world">Hello world!</string>

</resources>
