<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gcm_section_title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gcm_reg_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/gcmRegistrationIdTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/gcmRegistrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reRegisterToGcm"
            android:text="@string/reregister"
            android:drawableLeft="@drawable/ic_action_refresh"/>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_info_section_title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_token"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/serverTokenTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/roomIdTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/editServerInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleServerInformationContainer"
            android:text="@string/edit_server_info"
            android:drawableLeft="@drawable/ic_action_edit"
            />

        <LinearLayout
            android:id="@+id/editServerInfoContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_url"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/serverUrlInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serverUrlHint"
                android:inputType="textUri" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_username"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/serverUsernameInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/serverPasswordInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/roomIdInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <Button
                android:id="@+id/serverCredentialsSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registerToServer"
                android:text="@string/save"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="40dp" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_section_title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/sensorIdTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_room_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/sensorRoomIdTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/sensorInformationRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="refreshSensorInformation"
            android:text="@string/refresh"
            android:drawableLeft="@drawable/ic_action_refresh"
            />


        <Space
            android:layout_width="fill_parent"
            android:layout_height="40dp" />

    </LinearLayout>

</ScrollView>